# micromouse-gym

./: README.md  pyproject.toml  test_maze_env.py
gymnasium_env/: __init__.py
gymnasium_env/envs/: __init__.py  maze_env.py  maze_generator.py  reward_config.py
gymnasium_env/wrappers/: __init__.py
runs/DQN_1/: events.out.tfevents.1736148232.DESKTOP-Yuhsin.44752.0
runs/DQN_2/: events.out.tfevents.1736150554.DESKTOP-Yuhsin.31444.0
runs/DQN_3/: events.out.tfevents.1736150829.DESKTOP-Yuhsin.48024.0
runs/DQN_4/: events.out.tfevents.1736166862.DESKTOP-Yuhsin.27104.0
runs/DQN_5/: events.out.tfevents.1736259942.DESKTOP-Yuhsin.34968.0
tests/: test_maze_env.py
train/: qlearning.py  train_dqn.py
