[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gymnasium_env"
version = "0.0.1"
description = "自定义的Gymnasium强化学习环境，包含迷宫环境"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "gymnasium>=0.29.0",
    "pygame>=2.1.3",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
]

[project.urls]
Repository = "https://github.com/yourusername/micromouse-gym"

[tool.hatch.build.targets.wheel]
packages = ["gymnasium_env"]
